# agora

./: .cookies.txt  .dockerignore  .env BORRAR  .env.example  .env.prod copy.example  .env1  .gitignore  .tmp_cookies.txt  AGENTS.md  README.md  VPS_DEPLOY.md  deploy-prod.yaml  docker-compose.prod.yml  docker-compose.yml  features.txt  game_setup.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yml
deploy/: backup_db.ps1  backup_db.sh  down.sh  fetch_infisical.py  healthcheck.sh  logs.sh  resolve_env.ps1  resolve_env.sh  restore_db.sh  up.ps1  up.sh
docs/: panel-control-game-library.md
docs/adr/: standard-templates-in-db.md
documents/: engineering_lead.md  infra.md  product_management.md
engine/: Dockerfile  README.md  main.py  pyproject.toml
engine/migrations/: 001_init.sql  002_auth_users.sql  003_game_feedback.sql  003_user_roles.sql  004_canonical_message_log.sql  005_notary_queue_foundation.sql  006_runtime_settings.sql  007_standard_templates.sql
engine/src/: io_adapters.py  manager.py  player_identity.py  public_missions.py  session.py  text_limits.py
engine/tests/: conftest.py
frontend/: README.md
frontend/static/: admin-feedback.html  admin-observability.html  app.js  index.html  styles.css
game_templates/rome_caesar_harry/: config.json
nginx/: .htpasswd.example  README.md  nginx.conf  nginx.prod.conf
observability-platform/: README.md  docker-compose.langfuse.yml  docker-compose.telemetry.yml
observability-platform/telemetry-service/: Dockerfile  app.py  docker-entrypoint.sh  requirements.txt
root_launcher/: __init__.py
src/: __init__.py  graph.py  io_adapters.py  logging_config.py  manager.py  renderer.py  session.py  state.py
src/agents/: __init__.py  base.py  character.py  deepseek_adapter.py  guionista.py  observer.py
src/api/: app.py  auth.py  dependencies.py  routes.py  schemas.py
src/cli/: __init__.py  run.py
(+127 files in other folders)
