[tool.poetry]
name = "agora"
version = "0.1.0"
description = "Motor narrativo conversacional para videojuego basado en agentes"
authors = ["Agora Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.70.0"
langchain = "^0.3.0"
langchain-deepseek = "^0.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
agora = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
