[tool.poetry]
name = "agora-root"
version = "0.1.0"
description = "Root launcher for Agora monorepo"
authors = ["Agora Team"]
readme = "README.md"
packages = [{ include = "root_launcher" }]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"

[tool.poetry.scripts]
agora = "root_launcher:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
